app/style/SendPage.less
@import (reference) "./main.less";

.send-wrapper-area {
  width: 740px;
  margin-bottom: 20px;
}

.details-area {
  width: 298px;
  height: 145px;
  background-color: var(--transfer-details-bg);
  padding: 14px 20px 0 0;
  font-size: 11px;
  color: var(--account-text);

  .details-value-column {
    color: var(--sidebar-bottom-light-text-color);

    .total-amount-send-amount-bytes {
      color: var(--account-text);
    }
  }
}

.output-row {
  background-color: var(--background-back-color);
  padding-top: 14px;
  padding-bottom: 1px;
}

.send-label {
  font-size: 19px;
  line-height: 24px;
  width: 86px;
  text-align: right;
  margin-bottom: 19px;
}

.send-icon-wrapper {
  .inline-block-mixin;

  width: 24px;
  height: 24px;
  background-position: 50% 50%;
  background-size: 19px;
  background-repeat: no-repeat;
  margin-bottom: 23px;
  cursor: pointer;

  &.add {
    width: 20px;
    height: 20px;
    background-image: var(--add-icon);
    background-size: 6px;
    background-color: var(--account-pubkey-text);
    box-shadow: 0px 3px 8px var(--icons-shadow);
    border-radius: 5px;

    &.disabled {
      background-image: var(--add-icon)-disabled;
      background-color: #E7EAED;
      cursor: auto;
    }
  }

  &.delete {
    width: 20px;
    height: 20px;
    background-image: var(--delete-icon);
    background-size: 10px;

    &:hover {
      opacity: 0.7;
    }
  }

  &.wallet-icon {
    background-image: var(--send-all-default);

    &.disabled {
      background-color: var(--background-back-color);
      background-image: var(--send-all-disabled);
      cursor: auto;

      &:hover {
        background-image: var(--send-all-disabled);
      }
    }

    &:hover {
      background-image: var(--send-all-hover);
    }
  }

  &.cancel-icon {
    background-image: var(--indicator-invalid-icon);

    &:hover {
      opacity: 0.85;
    }
  }

  &.self-account-icon {
    background-image: var(--send-self-default);

    &:hover {
      background-image: var(--send-self-hover);
    }
  }
}

.details-label-column {
  white-space: nowrap;
  .total-amount-sending-text {
    margin-left: 27px;
  }

  .estimated-fee-send-text {
    margin-left: 64px;
  }

  .estimated-size-send-text {
    margin-left: 61px;
  }
}

.details-value-column {
  text-align: right;
  flex-grow: 1;
}

.details-title {
  text-align: right;
  margin-bottom: 45px;
}

.send-select-account {
  display: block;
  overflow: hidden;
  width: 100%;
  height: 100%;
  color: var(--input-color-default);
  font-size: 19px;
}

.send-select-account:hover {
  height: auto;
}

.send-input-wrapper {
  margin-bottom: 23px;

  .input-errors-area {
    margin-bottom: -14px;
  }
}

.send-input {
  width: 260px;
  margin-left: 10px;
  margin-right: 10px;

  &.input-and-unit {
    width: 255px;
    padding-bottom: 2px;
  }

  &.send-all {
    border-bottom: 1px var(--stroke-color-default) solid;
    text-align: right;
    background-color: var(--disabled-background-color);
  }
}

.send-address-input {
  .inline-block-mixin;

  font-size: 13px;
  line-height: 17px;
  margin-right: 34px;
}

.send-row {
  margin-bottom: 20px;
}

.send-button-area {
  width: 740px;
  text-align: right;
}

@media screen and (max-width: 768px) {
  .is-row.send-wrapper-area {
    flex-direction: column;
    height: auto;
  }

  .output-row {
    width: 355px;
  }

  .send-button-area {
    width: 355px;
  }

  .send-label {
    width: 70px;
    font-size: 13px;
  }

  .send-input-wrapper {
    margin-bottom: 22px;
  }

  .send-input {
    width: 240px;
    margin-left: 5px;
    margin-right: 5px;
  }

  .details-area {
    padding: 0;
    display: flex;
    width: 355px;
    height: 85px;
  }

  .details-title {
    text-align: left;
    padding-left: 20px;
    padding-top: 20px;
  }

  .details-label-column {
    padding-top: 20px;
    padding-left: 70px;
  }

  .details-value-column {
    padding-top: 20px;
    padding-left: 25px;
  }

  .send-icon-wrapper {
    margin-bottom: 20px;
  }
}

